k8s/core/api-gateway/deployment.yaml
# El Orquestador punta a una imagen local llamada hashimoto/api-gateway:latest
#e incluirá también el volumen de logs para evitar el mismo problema que sufrió el servicio de pacientes.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: hashimoto-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: hashimoto/api-gateway:latest
          imagePullPolicy: Never # Obliga a K3d a leer tu compilación local
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: app-logs
              mountPath: /app/logs

      volumes:
        - name: app-logs
          emptyDir: {}
